--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,27 +6,27 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 flasgger==0.9.7.1
-Flask==3.0.3
-Flask-Admin==1.6.1
-Flask-Cors==5.0.0
-Flask-PyMongo==2.3.0
-gunicorn==23.0.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-mistune==3.0.2
-packaging==24.1
-pymongo==4.9.1
-python-dotenv==1.0.1
-PyYAML==6.0.2
-referencing==0.35.1
-requests==2.32.3
-rpds-py==0.20.0
-six==1.16.0
-urllib3==2.2.3
-Werkzeug==3.0.4
+Flask>=3.0.4
+Flask-Admin>=1.6.1
+Flask-Cors>=5.0.0
+Flask-PyMongo>=2.3.0
+gunicorn>=23.0.0
+idna>=3.10
+itsdangerous>=2.2.0
+Jinja2>=3.1.4
+jsonschema>=4.23.0
+jsonschema-specifications>=2023.12.1
+MarkupSafe>=2.1.5
+marshmallow>=3.22.0
+mistune>=3.0.2
+packaging>=24.1
+pymongo>=4.10.0
+python-dotenv>=1.0.1
+PyYAML>=6.0.2
+referencing>=0.35.1
+requests>=2.32.3
+rpds-py>=0.20.0
+six>=1.16.0
+urllib3>=2.2.3
+Werkzeug>=3.0.4
 WTForms==3.1.2
